src/objects/P7S1_NielsenData__c.object
<CustomObject>
    <description>Rohdaten der Nielsendaten</description>
    <fields>
        <fullName>P7S1_Brutto__c</fullName>
        <description>Brutto-Umsatz</description>
        <inlineHelpText>Brutto-Umsatz</inlineHelpText>
        <label>Brutto</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_InPageInStream__c</fullName>
        <label>InPage/InStream</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Medienklasse__c</fullName>
        <label>Medienklasse</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Month__c</fullName>
        <label>Monat</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P7S1_NielsenAggr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nielsen-Daten</label>
        <referenceTo>P7S1_NielsenDataAggr__c</referenceTo>
        <relationshipLabel>Nielsen-Rohdaten</relationshipLabel>
        <relationshipName>Nielsen_Rohdaten</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>P7S1_NielsenId__c</fullName>
        <label>Nielsen-Id</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_NielsenName__c</fullName>
        <label>Nielsen-Name</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Vermarkter__c</fullName>
        <label>Vermarkter</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Werbetraeger__c</fullName>
        <label>Werbeträger</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Year__c</fullName>
        <label>Jahr</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Nielsen-Rohdaten</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>P7S1_NielsenId__c</columns>
        <columns>P7S1_NielsenName__c</columns>
        <columns>P7S1_Year__c</columns>
        <columns>P7S1_Month__c</columns>
        <columns>P7S1_Medienklasse__c</columns>
        <columns>P7S1_Werbetraeger__c</columns>
        <columns>P7S1_Vermarkter__c</columns>
        <columns>P7S1_InPageInStream__c</columns>
        <columns>P7S1_Brutto__c</columns>
        <columns>P7S1_NielsenAggr__c</columns>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
        <language>de</language>
    </listViews>
    <nameField>
        <displayFormat>NIEDATA-{0000}</displayFormat>
        <label>Nielsen-Rohdaten-Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Nielsen-Rohdaten</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>